[backend] Adopt bank account ledger entries to list type